Fixed up the styles for use on mobile. It's not great but it's usable. Ideally the left sidebar would collapse on mobile into a hamburger menu.

--- a/web/app/less/main.less
+++ b/web/app/less/main.less
@@ -39,6 +39,10 @@ th, .selectable {
 	box-shadow: inset 0 3px 3px rgba(128, 128, 128, .5);
 }
 
+.table-container {
+    overflow-x: auto;
+}
+
 #footer {
   height: 30px;
   min-height: 30px;
